# Baton

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: core-dev.md  interface-dev.md  qa-inspector.md
.claude/skills/baton-orchestrator/: skill.md
.claude/skills/baton-orchestrator/references/: architecture-spec.md  go-python-mapping.md
baton/: __init__.py  __main__.py  cli.py
baton/api/: routes.py  server.py  views.py
baton/domain/: __init__.py  errors.py  types.py
baton/mcp/: server.py
baton/orchestrator/: __init__.py  automated_check.py  evaluator.py  job_runtime.py  parallel.py  planning.py  service.py  verification.py  workspace.py
baton/provider/: __init__.py  base.py  claude.py  codex.py  command.py  errors.py  mock.py  protocol.py  registry.py
baton/runtime/: __init__.py  lifecycle.py  policy.py  runner.py  types.py
baton/store/: __init__.py  artifact_store.py  state_store.py
baton/web/: app.js  index.html  style.css
tests/: conftest.py  test_api_routes.py  test_domain_types.py  test_integration.py  test_mcp_server.py  test_orchestrator_service.py  test_orchestrator_submodules.py  test_provider_base.py  test_provider_errors.py  test_provider_protocol.py  test_provider_registry.py  test_runtime.py  test_store.py
