[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "baton"
version = "0.1.0"
description = "Python multi-agent orchestration engine"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "typer>=0.12",
    "sse-starlette>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[project.scripts]
baton = "baton.cli:app"
